--- a/app/src/main/res/layout/item_my_pokemon.xml
+++ b/app/src/main/res/layout/item_my_pokemon.xml
@@ -44,6 +44,7 @@
             android:layout_marginEnd="16dp"
             android:fontFamily="@font/poppins_bold"
             android:includeFontPadding="false"
+            android:visibility="gone"
             android:text="Rename"
             android:textColor="@color/blue"
             android:textSize="12sp"
@@ -53,6 +54,7 @@
 
         <TextView
             android:id="@+id/tvRelease"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_bold"
